--- a/src/app/modules/admin/portal/portal.component.html
+++ b/src/app/modules/admin/portal/portal.component.html
@@ -14,7 +14,7 @@
                 <div class="box">
                     <div class="inside">
                         <h3>{{'manageCustomers' | translate}}</h3>
-                        <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn">Go</a>
+                        <a href="javascript: void(0)" [routerLink]="['/admin/customers']" class="border-btn" id="customers">Go</a>
                     </div>
                 </div>
             </div>
