delete test case for customer

--- a/src/app/modules/admin/customers/customers.component.html
+++ b/src/app/modules/admin/customers/customers.component.html
@@ -36,8 +36,8 @@
                 <!-- <div class="city po-col">{{item.city}}</div>
                 <div class="phone po-col">{{item.phone}}</div>
                 <div class="address po-col">{{item.address}}</div> -->
-                <div class="action po-col editcust"><span>Action</span><a href="javascript: void(0)" class="editcust" *ngIf="currentUser != item.clientId" (click)="openModal(template, true, item)">{{'editItem' | translate}}</a></div>
-                <div class="action po-col"><span title="Delete">{{'delete' | translate}}</span><a href="javascript: void(0)" class="delcust" *ngIf="currentUser != item.clientId" (click)="deleteUser(item.clientId)">Delete Item</a></div>
+                <div class="action po-col editcust"><span>Action</span><a href="javascript: void(0)" class="editcust" *ngIf="currentUser != item.clientId" id="customers_{{i}}" (click)="openModal(template, true, item)">{{'editItem' | translate}}</a></div>
+                <div class="action po-col"><span>{{'delete' | translate}}</span><a href="javascript: void(0)" class="delcust" *ngIf="currentUser != item.clientId" id="delete_{{item.clientId}}" (click)="deleteUser(item.clientId)">Delete Item</a></div>
             </div>
         </div>
     </div>
